# pico-hid-host

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hid_host_serial_test/: CMakeLists.txt
apps/hid_host_serial_test/src/: main.c
src/: hid_app.c  hid_app.h  hid_host_common.c  hid_host_common.h  hid_host_info.c  hid_host_info.h  hid_host_joy.c  hid_host_joy.h  hid_host_utils.c  hid_host_utils.h  hid_ri.c  hid_rip.c  hid_rip.h  tusb_config.h  xinput_host.c  xinput_host.h
test/: CMakeLists.txt
test/suite1/: CMakeLists.txt  all.c  stuff.c  test_hid_host_joy.c  test_hid_host_utils.c  test_hid_ri.c  test_hid_rip.c
